--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 
 FastFoodApp/FastFoodApp.pro
 FastFoodApp/FastFoodApp.pro.user
-build-FastFoodApp-Desktop_Qt_6_2_2_MinGW_64_bit-Debug/Makefile.Release
-build-FastFoodApp-Desktop_Qt_6_2_2_MinGW_64_bit-Debug/Makefile.Debug
+build-FastFoodApp-Desktop_Qt_6_2_2_MinGW_64_bit-Debug
